--- a/package.json
+++ b/package.json
@@ -65,12 +65,12 @@
     "mini-css-extract-plugin": "^2.9.2",
     "mocha": "^8.1.2",
     "mocha-loader": "^5.1.5",
-	"process": "^0.11.10",
     "postcss": "^8.5.3",
     "postcss-for": "^2.1.1",
     "postcss-loader": "^7.3.4",
     "postcss-modules-values": "^1.3.0",
     "postcss-preset-env": "^10.1.6",
+    "process": "^0.11.10",
     "react-json-tree": "^0.11.2",
     "react-overlays": "^5.2.1",
     "redux-devtools": "^3.1.0",
@@ -93,6 +93,7 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "apache-arrow": "^21.1.0",
     "blob-stream": "^0.1.3",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
@@ -116,4 +117,3 @@
     "upng-js": "^2.1.0"
   }
 }
-
