--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,23 @@
 asgiref==3.8.1
 async-timeout==5.0.1
+backports.zoneinfo==0.2.1
+certifi==2025.11.12
+cffi==1.17.1
+charset-normalizer==3.4.4
 click==8.1.8
-Django==3.2.24
+cryptography==46.0.3
+django==4.2.26
+django-allauth==65.13.0
 django-rq==3.1
+idna==3.11
+jwt==1.3.1
 numpy==1.24.4
-psycopg2-binary==2.9.9
 pyarrow==17.0.0
+pycparser==2.23
 pytz==2025.2
 redis==6.1.1
+requests==2.32.4
 rq==2.3.3
 sqlparse==0.5.3
 typing-extensions==4.13.2
+urllib3==2.2.3
