--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 asgiref==3.8.1
 async-timeout==5.0.1
-backports.zoneinfo==0.2.1
 certifi==2025.11.12
-cffi==1.17.1
+cffi>1.17.1
 charset-normalizer==3.4.4
 click==8.1.8
 cryptography==46.0.3
